Fix z-index

--- a/src/sass/components/nav.module.scss
+++ b/src/sass/components/nav.module.scss
@@ -4,7 +4,10 @@
   justify-content: space-around;
   position: fixed;
   bottom: 0;
+  z-index: 1;
   width: 100%;
+  padding: .5em 0;
+  background-color: $page-bg;
   &__link{
     display: flex;
     flex-direction: column;
