--- a/src/sass/layouts/main.module.scss
+++ b/src/sass/layouts/main.module.scss
@@ -1,4 +1,5 @@
 .app {
   position: relative;
+  z-index: 0;
   min-height: 100vh;
 }
